2000-06-03 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSAttributedString.m: ([-setAlignment:range:]) retain/release
	problem fixed.

Thu Jun  1 21:50:34 2000  Nicola Pero  <nicola@brainstorm.co.uk>

	* Source/NSScrollView.m ([NSScrollView -tile]): Fixed position of
	corner view when there is no horizontal scrollview; fixed position
	of parts when there is a header view but not a horizontal
	scrollview.
	
2000-05-24 Georg Fleischmann <georg@vhf.de>

	* gui/Model/GMAppKit.m
	([NSScrollView(GMArchiverMethods) -initWithModelUnarchiver:]):
	select selected cells in matrix too

2000-05-20  Fred Kiefer  <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSTextView.h:
	Corrected signature for [smartInsertForString:...]
	* Source/NSAttributedString.m:
	[setAlignment:range:] allwas use a mutableCopy
	* Headers/gnustep/gui/NSText.h:
	* Source/NSText.m:
	* Source/NSTextView.m:
	Reorganised all the Copy and Paste code. Added some implementation.

2000-05-23  Adam Fedor  <fedor@gnu.org>

	* Source/NSImage.m ([NSImage +imageNamed:]): Check for nil extension.

2000-05-12 Georg Fleischmann

	* Model/GMAppKit.m
        ([NSScrollView(GMArchiverMethods) -initWithModelUnarchiver:]):
        move unarchiving of backgroundColor behind documentView

2000-05-20  Fred Kiefer  <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSText.h:
	* Source/NSAttributedString.m:
	* Source/NSText.m:
	* Source/NSTextView.m:
	Improved the handling of character and paragraph attributes on NSText
	and added basic implementations for these methods on NSTextView.
	Some ivars on NSText have been replaced by values in 
	[ typingAttributes].

2000-05-17  Jonathan Gapen  <jagapen@whitewater.chem.wisc.edu>

	* Model/GMAppKit.m:  NSButton methods removed; all NSButton
	attributes are actually stored in an associated NSButtonCell.
	Eliminate (de)archiving of NSTextField attributes that duplicate
	attributes of its associated NSTextFieldCell.
	NSMenuItem [encodeWithModelArchiver:] Do not encode images when